--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ repo_url: https://github.com/umasds/
 pages:
 - ['index.md', 'Home']
 - ['vm.md', 'Virtual Machine']
+- ['res.md', 'Resources']
 
 theme: readthedocs
 
